--- a/android-developer.html
+++ b/android-developer.html
@@ -49,6 +49,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdp/'>
+    Senior / Lead Android Developer at DocsApp
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/dcard/jobs/874426'>Job Application for Senior Android Developer at Dcard</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -80,7 +86,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light"></span></p>
 <p>4 ??. ????? ... Apply online for the job of Android Developer at Wheely.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275589-android-developer'>Prospect Infosys Inc. Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275589-android-developer'>Prospect Infosys Inc. Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -180,7 +186,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221194-android-developer-to-work-in-lisbon-portugal'>Cross Border Talents Android Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221194-android-developer-to-work-in-lisbon-portugal'>Cross Border Talents Android Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -216,7 +222,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/82ee27a5-ee83-4ab9-88d8-1af86893a5cb'>vpTech - Android developer H/F</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/82ee27a5-ee83-4ab9-88d8-1af86893a5cb'>vpTech - Android developer H/F</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -252,7 +258,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://urban.workable.com/j/8E05A619E8'>Urban - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://urban.workable.com/j/8E05A619E8'>Urban - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius London Paris Manchester</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -265,7 +271,7 @@ European software development company providing services worldwide since?...</p>
 <p>Hace 3 d?as ... Android Developer. Buenos Aires. Operations ? Developers. Full time. Apply for 
 this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...</p>
 <hr/>
-<h5><a href='https://syone2.recruitee.com/o/ref4392019-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref4392019-android-developer'>
       (Ref.439/2019) - Android Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -381,7 +387,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://mediamonks.workable.com/j/7A21AF7166'>MediaMonks - Jobs: Android Developer at MediaMonks HQ - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mediamonks.workable.com/j/7A21AF7166'>MediaMonks - Jobs: Android Developer at MediaMonks HQ - Apply online</a></h5> 
 <p><span class="badge badge-light">North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -398,7 +404,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://grofers.recruiterbox.com/jobs/fk03hug/'>
+<h5><a href='https://grofers.recruiterbox.com/jobs/fk03hug/'>
     Full Stack Android Developer at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -483,10 +489,6 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=odKhafw8&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nVHxxKwV'>ServiceNow Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-01</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GCSMalta/743999690116296-senior-android-developer'>GCS Malta Senior Android Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-01</p>
 <hr/>
 
 
