--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -87,7 +87,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4369028002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4369028002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -139,7 +139,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4362735002'>Job Application for Speech Language Pathologist - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4362735002'>Job Application for Speech Language Pathologist - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -176,7 +176,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Loma Linda, California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -204,7 +204,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/owj63fwI'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/owj63fwI'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -218,7 +218,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
 today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
+<h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... WW - Heritage Manor West is now hiring a Part Time Speech Language 
 Pathologist - Shreveport, LA in Shreveport, Louisiana. Review all of the job 
@@ -294,7 +294,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349809002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349809002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -314,7 +314,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
+<h5><a href='https://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
@@ -371,7 +371,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691176618-home-health-speech-pathologist'>Phoenix Home Care Home Health Speech Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691176618-home-health-speech-pathologist'>Phoenix Home Care Home Health Speech Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
